--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: rgba(92, 131, 92, 0.815)
+    background-image: url('bulbasaur-ivysaur-venusaur-2842.jpg');
 }
 
 h1 {
